<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="favorite_list_empty">Favorite List Empty</string>
</resources>